--- a/developer.html
+++ b/developer.html
@@ -47,7 +47,7 @@
         // Menghapus semua data di localStorage
         localStorage.clear();
         alert("Semua data berhasil dihapus.");
-        window.location.href = "index.html";  // Redirect ke halaman login setelah menghapus data
+        window.location.href = "indexx.html";  // Redirect ke halaman login setelah menghapus data
       }
     }
   </script>
