--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       }
 
       alert("Login berhasil.");
-      window.location.href = "indexx.html"; // Arahkan ke halaman utama
+      window.location.href = "produk.html"; // Arahkan ke halaman utama
     }
   </script>
 </body>
