--- a/index.html
+++ b/index.html
@@ -2,43 +2,65 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Login Akun</title>
+  <title>Login - Toko Ghanz</title>
   <style>
-    body { font-family: Arial; padding: 20px; text-align: center; }
-    input { width: 80%; padding: 10px; margin: 10px 0; border-radius: 8px; border: 1px solid #ccc; }
-    button { padding: 10px 20px; border: none; border-radius: 8px; background: #0074ff; color: #fff; }
+    body {
+      background: #e0f7fa;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .login-box {
+      background: #fff;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      text-align: center;
+      width: 300px;
+    }
+    input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
+    button {
+      background: #00796b;
+      color: white;
+      padding: 10px;
+      width: 100%;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+    }
+    button:hover {
+      background: #004d40;
+    }
   </style>
 </head>
 <body>
-  <h2>Login</h2>
-  <input type="text" id="username" placeholder="Username" required><br>
-  <input type="password" id="password" placeholder="Password" required><br>
-  <button onclick="login()">Login</button>
-  <p>Belum punya akun? <a href="register.html">Daftar</a></p>
+  <div class="login-box">
+    <h2>Login Admin</h2>
+    <input type="text" id="username" placeholder="Username" />
+    <input type="password" id="password" placeholder="Password" />
+    <button onclick="login()">Login</button>
+  </div>
 
   <script>
     function login() {
-      const username = document.getElementById('username').value.trim();
-      const password = document.getElementById('password').value;
+      const user = document.getElementById("username").value;
+      const pass = document.getElementById("password").value;
 
-      // Cek jika username dan password sesuai dengan data developer
-      if (username === "ghanz" && password === "viyata53") {
-        localStorage.setItem("currentUser", "ghanz");  // Simpan status login sebagai developer
-        alert("Login sebagai Developer berhasil.");
-        window.location.href = "developer.html"; // Arahkan ke halaman Developer
-        return;
+      // Ganti sesuai kredensial kamu
+      if (user === "admin" && pass === "ghanz123") {
+        localStorage.setItem("currentUser", user);
+        window.location.href = "produk.html";
+      } else {
+        alert("Username atau password salah!");
       }
-
-      // Cek login pengguna biasa
-      const users = JSON.parse(localStorage.getItem("users") || "[]");
-      const user = users.find(u => u.username === username && u.password === password);
-
-      if (!user) {
-        return alert("Username atau password salah.");
-      }
-
-      alert("Login berhasil.");
-      window.location.href = "produk.html"; // Arahkan ke halaman utama
     }
   </script>
 </body>
