--- a/index.html
+++ b/index.html
@@ -2,65 +2,64 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Login - Toko Ghanz</title>
+  <title>Login Admin</title>
   <style>
     body {
-      background: #e0f7fa;
+      background-color: #dff9fb;
       font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      margin: 0;
     }
     .login-box {
-      background: #fff;
+      background: white;
       padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
       text-align: center;
-      width: 300px;
     }
     input {
-      width: 100%;
+      display: block;
+      margin: 10px auto;
       padding: 10px;
-      margin: 10px 0;
-      border-radius: 8px;
+      width: 80%;
+      border-radius: 5px;
       border: 1px solid #ccc;
     }
     button {
-      background: #00796b;
+      background: #16a085;
       color: white;
-      padding: 10px;
-      width: 100%;
+      padding: 10px 20px;
       border: none;
-      border-radius: 8px;
-      font-weight: bold;
+      border-radius: 5px;
+      cursor: pointer;
     }
-    button:hover {
-      background: #004d40;
-    }
+    p a { text-decoration: none; color: #2980b9; }
   </style>
 </head>
 <body>
   <div class="login-box">
     <h2>Login Admin</h2>
-    <input type="text" id="username" placeholder="Username" />
-    <input type="password" id="password" placeholder="Password" />
+    <input type="text" id="username" placeholder="Username">
+    <input type="password" id="password" placeholder="Password">
     <button onclick="login()">Login</button>
+    <p>Belum punya akun? <a href="register.html">Daftar di sini</a></p>
   </div>
 
   <script>
     function login() {
-      const user = document.getElementById("username").value;
-      const pass = document.getElementById("password").value;
+      const username = document.getElementById('username').value.trim();
+      const password = document.getElementById('password').value;
 
-      // Ganti sesuai kredensial kamu
-      if (user === "admin" && pass === "ghanz123") {
-        localStorage.setItem("currentUser", user);
-        window.location.href = "produk.html";
-      } else {
-        alert("Username atau password salah!");
-      }
+      const users = JSON.parse(localStorage.getItem("users") || "[]");
+      const match = users.find(user => user.username === username && user.password === password);
+
+      if (!match) return alert("Username atau password salah!");
+
+      alert("Login berhasil!");
+      window.location.href = "produk.html";
     }
   </script>
 </body>
