--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
     <input type="text" id="username" placeholder="Username">
     <input type="password" id="password" placeholder="Password">
     <button onclick="login()">Login</button>
-    <p>Belum punya akun? <a href="register.html">Daftar di sini</a></p>
-  </div>
+    <p>Sudah punya akun? <a href="login.html">Login</a></p>
 
   <script>
     function login() {
