--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -16,33 +14,30 @@
       background-color: #f4f4f4;
     }
     .login-container {
-      width: 100%;
       max-width: 400px;
+      width: 100%;
       padding: 20px;
       background: #fff;
       border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     h2 {
       text-align: center;
     }
-    input {
+    input, button {
       width: 100%;
       padding: 10px;
-      margin-bottom: 15px;
-      border: 1px solid #ccc;
+      margin: 8px 0;
       border-radius: 4px;
+      border: 1px solid #ccc;
     }
     button {
-      width: 100%;
-      padding: 10px;
       background-color: #4CAF50;
-      border: none;
-      border-radius: 4px;
       color: white;
+      border: none;
       font-size: 16px;
     }
-    .signup-link {
+    .signup {
       text-align: center;
       margin-top: 10px;
     }
@@ -54,24 +49,23 @@
     <input type="text" id="loginUsername" placeholder="Username" required />
     <input type="password" id="loginPassword" placeholder="Password" required />
     <button onclick="login()">Login</button>
-    <div class="signup-link">
-      <a href="register.html">Daftar Akun</a>
+    <div class="signup">
+      <a href="register.html">Belum punya akun? Daftar</a>
     </div>
   </div>
 
   <script>
     function login() {
-      const inputUser = document.getElementById('loginUsername').value.toLowerCase();
+      const inputUser = document.getElementById('loginUsername').value.trim().toLowerCase();
       const inputPass = document.getElementById('loginPassword').value;
 
-      // Ambil data dari localStorage
       const savedUser = localStorage.getItem('username');
       const savedPass = localStorage.getItem('password');
 
       if (
         savedUser &&
         savedPass &&
-        inputUser === savedUser.toLowerCase() &&
+        inputUser === savedUser.trim().toLowerCase() &&
         inputPass === savedPass
       ) {
         window.location.href = 'produk.html';
